Overflow: hidden fix

--- a/Web/css/main.less
+++ b/Web/css/main.less
@@ -8,6 +8,8 @@ html, body {
   margin: 0;
   font-size: 10px;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 *::-moz-focus-inner {
